added command line demo